[project]
name = "py-geoagent"
version = "0.1.0"
description = "GEO-optimized article transformation CLI"
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "markdown>=3.4.0",
]

[project.scripts]
geoagent = "geoagent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["geoagent*"]
